bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:3: error: value &&! is not a member of Boolean
  return (aSmile&&bSmile || !aSmile&&!bSmile)
                                   ^